2.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: nl-task2-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool:alpine-extra
        ports:
          - name: http-multitool
            containerPort: 8080
            protocol: TCP
          - name: https-multitool
            containerPort: 8443
            protocol: TCP
      - name: nginx
        image: nginx:latest
        ports:
          - name: nginx-http
            containerPort: 80
            protocol: TCP
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: web-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: web-content
        configMap:
          name: web-content
